# agl-service-low-collector-backup

./: .gitignore  .gitmodules  CMakeLists.txt
conf.d/cmake/: config.cmake
src/collectd/: CMakeLists.txt  collectd_glue.c  collectd_glue.h  config.h  cpu.c  memory.c  plugin.c  plugin.h
src/lowCollector/: CMakeLists.txt  api.c  api.h  api_cpu.c  api_cpu.h  lowCollector.c  plugin.c  plugin.export-map  plugin.h  userdata.h
src/lowCollector/api/: api.c  api.h
src/lowCollector/api/cpu/: api_cpu.c  api_cpu.h
src/lowCollector/api/memory/: api_memory.c  api_memory.h
src/lowCollector/api/processes/: api_processes.c  api_processes.h
src/lowCollector/basis/: basis.h
src/lowCollector/write/: write_json.c  write_json.h
